[package]
name = "odesat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"]}
ndarray = { version = "0.15.6", features = ["rayon"] }
rand = "0.8.5"
slab = "0.4.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
